3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/attack.c: Generate log message when a player kills another player -
include the ip address of the killer to make it easier to add them to
ban files. MSW 2002-05-06

------------------------------------------------------------------------------
Changes for 1.2.0:
Makefile.in, include/version.h: Update for 1.2.0 release
lib/Makefile.in: have it make an archive for the archetypes.
MSW 2002-04-28


doc/Developers/protocol: Add documentation about the map2 protocol command.
socket/request.c: Fix bad indentation for the map2 function.  No actual
   functional code changes, but some comments updated.  Running diff with the
   -w option will make the changes, or lack thereof, more viewable.
MSW 2002-04-28

crossedit/xutil.c: Update to use name of png file.
lib/archetypes: collected - pl_dragon arch changed a while back, with no
    new collect.
lib/collect.pl.in: Add some notes about usage if no option is given or
    if --help is given.
server/gods.c: Fix that resulted in weapon/armor restrictions not working.
MSW 2002-04-23

Various minor bugfixes.  Note the changes may appear larger than they
really are due to formatting/indentation changes.  Run diff -w to
supress those:
make_win32/installwin32.bat: Update for new image files.
server/c_object.c: Fix SAVE_INTERVAL #ifdef block.  It failed to compile
    as it was written.  Simplify code, but it should have the same effect.
server/move.c: Modify push_object so that if a player swaps position 
    with his pet, we send a esrv_map_scroll.  This should save bandwidth,
    and also prevents display corruption when fog of war on the client